--- a/bundle/vim-prettier/package.json
+++ b/bundle/vim-prettier/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vim-prettier",
   "author": "Mitermayer Reis <mitermayer.reis@gmail.com>",
-  "version": "1.0.0-beta",
+  "version": "1.0.0",
   "description": "Vim plugin for prettier",
   "license": "MIT",
   "repository": {
@@ -17,11 +17,11 @@
     "@prettier/plugin-php": "^0.16.3",
     "@prettier/plugin-ruby": "^0.8.0",
     "@prettier/plugin-xml": "^0.7.2",
-    "prettier-plugin-svelte": "^2.3.1",
-    "prettier": "^2.3.1"
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^2.3.1"
   },
   "devDependencies": {
-    "colors": "^1.4.1",
+    "colors": "^1.3.2",
     "jest": "^23.6.0",
     "vim-driver": "^1.0.0"
   }
